--- a/templates/child_gifts.html
+++ b/templates/child_gifts.html
@@ -64,7 +64,7 @@
 
                 {% if gift.link2 %}
                 <div class="gift-link">
-                    <a href="{{ gift.link2 }}" target="_blank" class="btn-link">🔗 Alternatívny Odkaz</a>
+                    <a href="{{ gift.link2 }}" target="_blank" class="btn-link">🔗 Zobraziť Online</a>
                 </div>
                 {% endif %}
 
