--- a/templates/child_gifts.html
+++ b/templates/child_gifts.html
@@ -37,7 +37,7 @@
                 <h3 class="gift-tile-name">{{ gift.name }}</h3>
                 
                 {% if gift.price_range %}
-                <p class="gift-tile-price"><strong>Cena:</strong> {{ gift.price_range }} {{ gift.currency }}</p>
+                <p class="gift-tile-price"><strong>Cena:</strong> {{ gift.price_range }}</p>
                 {% endif %}
             </div>
             
@@ -53,7 +53,7 @@
                 {% endif %}
 
                 {% if gift.price_range %}
-                <p class="gift-price"><strong>Cena:</strong> {{ gift.price_range }} {{ gift.currency }}</p>
+                <p class="gift-price"><strong>Cena:</strong> {{ gift.price_range }}</p>
                 {% endif %}
 
                 {% if gift.link %}
